[package]
name = "watchmen"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.23"
features = ["full"]

[dependencies.tokio-util]
version = "0.7"
features = ["full"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
