[package]
name = "watchmen"
description = "But who will watch the watchmen?"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "0.7"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.23"
features = ["full"]

[dependencies.tokio-util]
version = "0.7"
features = ["full"]

[dependencies.lettre]
version = "0.10"
default-features = false
features = ["smtp-transport", "hostname", "builder", "tokio1-rustls-tls"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
